fix: dropdown menus clipped by parents
Render them in portal on document.body

--- a/packages/ui/src/components/dropdown/dropdown.module.css
+++ b/packages/ui/src/components/dropdown/dropdown.module.css
@@ -95,6 +95,7 @@
 }
 
 .menu {
+  z-index: var(--z-index-1);
   max-width: 0;
   max-height: 0;
 }
